# TestCppModulesAndCMake

./: .gitignore  CMakeLists.txt
modules/DendyEngine/: DendyEngineCore.ixx
src/: main.cpp
